fix an issue with text overflow

--- a/src/components/markdown-styles.module.css
+++ b/src/components/markdown-styles.module.css
@@ -28,3 +28,7 @@
 .markdown a {
   @apply underline;
 }
+
+.markdown pre {
+  @apply overflow-scroll;
+}
